Add www.knigopis.local:7050 to CORS domains

--- a/nginx/site.conf
+++ b/nginx/site.conf
@@ -4,6 +4,7 @@ map $http_origin $cors_header {
     "~https?://www\.knigopis\.com\.dev$" "$http_origin";
     "~https?://www\.knigopis\.com\.lh$" "$http_origin";
     "~https?://www\.knigopis\.local$" "$http_origin";
+    "~https?://www\.knigopis\.local:7050$" "$http_origin";
     "~https?://alpha\.knigopis\.com$" "$http_origin";
 }
 
