Fix cors and cross-domain cookies

--- a/nginx/site.conf
+++ b/nginx/site.conf
@@ -1,11 +1,8 @@
 map $http_origin $cors_header {
     default "";
     "~https?://www\.knigopis\.com$" "$http_origin";
-    "~https?://www\.knigopis\.com\.dev$" "$http_origin";
-    "~https?://www\.knigopis\.com\.lh$" "$http_origin";
-    "~https?://www\.knigopis\.local$" "$http_origin";
-    "~https?://www\.knigopis\.local:7050$" "$http_origin";
     "~https?://alpha\.knigopis\.com$" "$http_origin";
+    "~https?://local\.knigopis\.com" "$http_origin";
 }
 
 server {
@@ -26,14 +23,14 @@ server {
     error_page 404 /index.php;
 
     location ~ \.php$ {
-        add_header 'Access-Control-Allow-Origin' $cors_header;
+        add_header 'Access-Control-Allow-Origin' $cors_header always;
         add_header 'Access-Control-Allow-Methods' 'GET, PUT, POST, DELETE, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
 
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' $cors_header;
+            add_header 'Access-Control-Allow-Origin' $cors_header always;
             add_header 'Access-Control-Allow-Methods' 'GET, PUT, POST, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
             add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
